# WSL-Development-Stack-Native-Win32-CPP

./: .gitignore  CreateWSL.ps1  README.md  _config.yml  index.md
Howtos/: howto_create_a_dev_container.md
Images/: placeholder.txt
Project-Templates/GUI-Application/: .env  CMakeLists.txt  _backup  _buildtask.bat  build.bat  makefile  makefile64  runsvr.sh  set_env.sh
Project-Templates/GUI-Application/doc/: win32-callbacks-data.md  win32-callbacks.md
Project-Templates/GUI-Application/doc/conventions/: NameSpaces.md  WindowsTypes-CTypes.md
Project-Templates/GUI-Application/headers/: stdafx.h
Project-Templates/GUI-Application/headers/system/: WindowAPI.h  WindowAPI_Def.h  WindowUtil.h
Project-Templates/GUI-Application/headers/views/_main/: StartUp.h  WinMain.h
Project-Templates/GUI-Application/headers/views/about/: AppAbout.h
Project-Templates/GUI-Application/resource/: App.rc  Resource.h
Project-Templates/GUI-Application/src/views/_main/: StartUp.cpp  WinMain.cpp
Project-Templates/GUI-Application/src/views/about/: AppAbout.cpp
_Installs_Required/Ubuntu_2404.0.5.0_x64/: legal.txt
assets/css/: style.scss
